implemented all routes and methods
